# aegisaudit

./: LICENSE  README.md  authorized_tokens.json  pyproject.toml  requirements.txt
src/inspector_safe/: __init__.py  cli.py  core.py  logger.py  report.py
tests/: test_cli.py
